49
================

06/08/24 Validate against full HTML documents in online form markup fields
04/08/24 Fix performance bug with onshelter simple search
04/08/24 animal_embed: retrieve full record on click
03/08/24 Do not hide transports with null type
02/08/24 Bad comparison brought boarding animals on shelter tomorrow
02/08/24 Redundant adoptapet mapping for Chinchilla removed
02/08/24 location filters now apply to all animal search keywords eg: hold, etc.
02/08/24 Hide never vacc/no rabies vacc alerts for users with no view vacc permission
01/08/24 Display emblems for mother on edit litters screen #1513
01/08/24 Add ANIMALLITTER csv import field
01/08/24 Update 34803: By->MovedBy so it doesn't break the update path on MySQL
01/08/24 PetFinder: Omit cruelty case flagged animals from Stray/Hold uploads
01/08/24 Streamline advanced find animal query so diet/originalowner joins not needed
01/08/24 Refactor find animal to use the 2 step ID->record trick like shelterview
01/08/24 Use brief records for embedded animal searches
31/07/24 Refactor get_animals_brief to use separate, faster query for performance
30/07/24 AdoptAPet: Add mapping for Blue Lacy -> Blue Lacy/Texas Lacy
29/07/24 Add default transport option
25/07/24 When editing animals, do not filter location list by user loc filter
25/07/24 When stripping personal data, strip coordinator, retain integer for ID fields
25/07/24 Fix error using advanced find animal with location filter 
23/07/24 Handle broken report queries when exporting to CSV/Excel
17/07/24 iOS: online forms, use browser built in support for required attribute
16/07/24 Include phone numbers when stripping personal info from service calls
16/07/24 Hide person name from location in mobile UI if no view person permission
16/07/24 Location filters incorrectly allowing fosters who left location
16/07/24 Strip person info from all service calls by default, use sensitive=1